<resources>
    <string name="app_name">SpellCasterFurtherDoneGood</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="maintitle">SpellCasterFurther</string>
    <string name="signingoogle">Continue with Google</string>
    <string name="signinmail">Continue with Mail</string>
    <string name="username">email</string>
    <string name="enter_username">enter email</string>
    <string name="password">password</string>
    <string name="enter_password">enter password</string>
    <string name="forgot_password">forgot password ?</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_email">Send Verification Email</string>
    <string name="Send">Send</string>
    <string name="library">Library</string>
    <string name="profile">Profile</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="pseudonym">Pseudonym</string>
    <string name="expert_mode">Expert mode (beta) ( not done yet)</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="delete_account">Delete Account</string>
    <string name="update_informations">Update Informations</string>
    <string name="add_to_inventory">Add to Inventory</string>
    <string name="cast">Cast</string>
    <string name="retry">Retry</string>
    <string name="next">Next</string>

</resources>